{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 74,
  "lineage": "a25d39fa-2e05-7b94-97b2-81ff19659231",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:921929661458:internet-gateway/igw-01d65f14db75be92e",
            "id": "igw-01d65f14db75be92e",
            "owner_id": "921929661458",
            "tags": {
              "Name": "nc igw"
            },
            "vpc_id": "vpc-0d52125d0da348fca"
          },
          "dependencies": [
            "aws_vpc.nc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nc-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:921929661458:loadbalancer/app/nc-lb/5db839704829317c",
            "arn_suffix": "app/nc-lb/5db839704829317c",
            "dns_name": "nc-lb-1104131145.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:921929661458:loadbalancer/app/nc-lb/5db839704829317c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nc-lb",
            "security_groups": [
              "sg-07e8cc2c75baa6957"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005fd356cc47fce2e"
              },
              {
                "subnet_id": "subnet-0576bb8119bce0802"
              }
            ],
            "subnets": [
              "subnet-005fd356cc47fce2e",
              "subnet-0576bb8119bce0802"
            ],
            "vpc_id": "vpc-0d52125d0da348fca",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.nc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nc-lb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:921929661458:listener/app/nc-lb/5db839704829317c/743ec8f80377ec58",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed response content",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:921929661458:listener/app/nc-lb/5db839704829317c/743ec8f80377ec58",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:921929661458:loadbalancer/app/nc-lb/5db839704829317c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.nc-lb",
            "aws_security_group.allow_http",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.nc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d35bbc63671c1089",
            "owner_id": "921929661458",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d65f14db75be92e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nc rt"
            },
            "vpc_id": "vpc-0d52125d0da348fca"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.nc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f966f6f66c55f040",
            "route_table_id": "rtb-0d35bbc63671c1089",
            "subnet_id": "subnet-0576bb8119bce0802"
          },
          "dependencies": [
            "aws_route_table.r",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fdb695b0a20ff51",
            "route_table_id": "rtb-0d35bbc63671c1089",
            "subnet_id": "subnet-005fd356cc47fce2e"
          },
          "dependencies": [
            "aws_route_table.r",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:921929661458:security-group/sg-07e8cc2c75baa6957",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e8cc2c75baa6957",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nc-allow_http",
            "name_prefix": null,
            "owner_id": "921929661458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d52125d0da348fca"
          },
          "dependencies": [
            "aws_vpc.nc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:921929661458:subnet/subnet-0576bb8119bce0802",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0576bb8119bce0802",
            "map_public_ip_on_launch": false,
            "owner_id": "921929661458",
            "tags": {
              "Name": "nextcloud-public-subnet"
            },
            "vpc_id": "vpc-0d52125d0da348fca"
          },
          "dependencies": [
            "aws_vpc.nc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:921929661458:subnet/subnet-005fd356cc47fce2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-005fd356cc47fce2e",
            "map_public_ip_on_launch": false,
            "owner_id": "921929661458",
            "tags": {
              "Name": "nextcloud-public-subnet"
            },
            "vpc_id": "vpc-0d52125d0da348fca"
          },
          "dependencies": [
            "aws_vpc.nc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nc-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:921929661458:vpc/vpc-0d52125d0da348fca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08583cbcbb8fb4435",
            "default_route_table_id": "rtb-07880e1e46c6ea28f",
            "default_security_group_id": "sg-048229382e0ae0b36",
            "dhcp_options_id": "dopt-4e2c7226",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d52125d0da348fca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07880e1e46c6ea28f",
            "owner_id": "921929661458",
            "tags": {
              "Name": "nextcloud-vpc"
            }
          }
        }
      ]
    }
  ]
}